--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -27,7 +27,7 @@
                         <div layout="row">
                             <div layout="column" class="c-detailedContent__price">
                                 <span class="c-detailedContent__currencyIcon">&#8377</span>
-                                <span class="c-detailedContent__salesPrice">{{detailObject.sale_price | currency | '&#8377'}}</span>
+                                <span class="c-detailedContent__salesPrice">{{detailObject.sale_price }}</span>
                                 <span class="c-detailedContent__costPrice">{{detailObject.mark_price}}</span>
                             </div>
                         </div>
