--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,7 @@ md-content {
     font-size: 12px;
     letter-spacing: 0.8px;
     line-height: 1.4;
+    display: inline-block !important;
 }
 
 .c-detailedContent__description:after {
@@ -163,6 +164,7 @@ md-content {
     padding-right: 10px;
     padding-bottom: 5px;
     padding-bottom: 5px;
+    padding-top: 4px;
     margin: 0;
     min-height: unset;
     line-height: unset;
@@ -175,6 +177,7 @@ md-content {
     padding-right: 10px;
     padding-bottom: 5px;
     padding-bottom: 5px;
+    padding-top: 4px;
     margin: 0;
     min-height: unset;
     line-height: unset;
@@ -204,7 +207,7 @@ md-content {
 }
 
 .c-productSwiper {
-    padding: 0px 20px;
+    padding: 0px 60px;
     padding-top: 60px;
     padding-bottom: 60px;
     position: relative;
@@ -249,19 +252,22 @@ md-content {
     position: unset !important;
 }
 
-.swiper-button-next, .swiper-button-prev {
-    top: unset !important;
-    bottom: -10px;
-    height: 30px !important;
+.swiper-button-next,
+.swiper-button-prev {
+    /*top: unset !important;
+    bottom: -10px;*/
+    height: 25px !important;
 }
 
+
+/*
 .swiper-button-next {
     right: 40px !important;
 }
 
 .swiper-button-prev {
     left: 40px !important;
-}
+}*/
 
 .swiper-container .swiper-button-next {
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%2344c8f5'%2F%3E%3C%2Fsvg%3E");
@@ -271,10 +277,28 @@ md-content {
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 27 44'%3E%3Cpath d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z' fill%3D'%2344c8f5'%2F%3E%3C%2Fsvg%3E");
 }
 
-/*.c-header__buttonHome {
-
+.c-showMoreSpan {
+    color: #41c8f3;
 }
-*/
+
+.c-showMoreSpan:hover {
+    cursor: pointer;
+}
+
+.md-button.md-default-theme[disabled],
+.md-button[disabled] {
+    background-color: #e7e7e7 !important;
+}
+
+.c-productSwiper__imageThumb {
+    height: 100px;
+    object-fit: contain;
+}
+
+.c-thumbnailSwiperWrap {
+    padding-top: 30px;
+}
+
 @media only screen and (max-width: 599px) {
     .c-cardRepeat__img {
         height: 125px;
