--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -120,3 +120,8 @@
         </div>
     </div>
 </div>
+<div layout="row" layout-align="center center" class="c-loaderWrap" ng-if="!detailObject">
+    <div layout="column">
+        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+    </div>
+</div>
